--- a/requirements/default.in
+++ b/requirements/default.in
@@ -38,6 +38,7 @@ jsonschema==2.6.0
 lxml==4.9.1
 markupsafe==2.0.1
 mercurial==6.4.2
+mysqlclient==2.2.4
 newrelic==9.6.0
 openai==1.12.0
 polib==1.0.6
@@ -52,6 +53,7 @@ sacremoses==0.0.43
 translate-toolkit==3.3.2
 whitenoise==5.2.0
 wsgi-sslify==1.0.1
+
 
 # Dependencies loaded from outside pypi.
 silme @ https://github.com/mozilla/silme/archive/v0.11.2.zip
