add heroku requirements

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/mozilla/pontoon.git"
+    "url": "https://github.com/boringtaskai/pontoon.git"
   },
   "author": "Mozilla",
   "license": "BSD",
